--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "lodash": "^4.17.21",
+    "node-schedule": "^2.1.0",
     "puppeteer": "^18.0.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
